# Public

./: .gitmodules  README.md
Deliverable5.5/: README.md  pyproject.toml  requirements.txt
Deliverable5.5/demo1/: pipeline_dependencies.yaml  pipeline_waterdensity.yaml  run_workflow.py  run_workflow_pipes.py  workflow_1oteapi.yaml  workflow_2oteapi.yaml  workflow_nopipes.yaml
Deliverable5.5/demo1/data/: aa_atb.lt  aa_tasks.lt  lt_water_aa.template  moltemplate_dependency.yaml  moltemplate_input.yaml  random_init.lt  water_tip3p_01.lt
Deliverable5.5/entities/: FilesDependency.json  FluidNPTInput.json
Deliverable5.5/execflowdemo/calculations/: lammps.py
Deliverable5.5/ontoKB/: .openmodel-inferred.ttl.swp  application.py  cost_definitions.yaml  individuals.ttl  ontoflow_output.txt  openmodel-inferred.ttl  openmodel.ttl  requirements.txt
OntoTrans2ndWorkshop/: README.md  demo.ipynb  pipeline_getdensity.yml  pipeline_input.yml  pipeline_input_1.yml  pipeline_input_2.yml  pipeline_input_3.yml  pyproject.toml  run_workflow.py  workflow_complete.yml  workflow_complete_mockexecutables.yml  workflow_pipeline.yml
OntoTrans2ndWorkshop/data/: multidata_moltemplateinput.xlsx
OntoTrans2ndWorkshop/entities/: MOLTEMPLATEInput.json  MOLTEMPLATEInput_SimulationParameters.json  WaterDensity.json
OntoTrans2ndWorkshop/execflowdemo/parsers/: lammpslog_parser.py
OntoTrans2ndWorkshop/mock_executables/: log.lammps  mocklammps.sh  mockmoltemplate.sh  output.dump  stdout_saved
OntoTrans2ndWorkshop/moltemplate/: 01_step.sh
OntoTrans2ndWorkshop/output/: test.yaml
OntoTrans2ndWorkshop/storage_plugins/: lammpslog.py  mmsim.py  moltemplate_input.py
OntoTrans2ndWorkshop/tests/: conftest.py
OntoTrans2ndWorkshop/tests/test_plugin/: test_mmsim_input_otelib.py  test_moltemplate_input_plugin.py
OntoTrans2ndWorkshop/tests/test_plugin/output/: moltemplate_input.lt  water_aa.lt
OntoTrans2ndWorkshop/tests/test_shell_job/: test_lammps_aiida_shell.py  test_moltemplate_aiida_shell.py
OntoTrans2ndWorkshop/tests/test_shell_job/testfiles/: s01_water_cg.in  s01_water_cg.in.init  s01_water_cg.in.run  s01_water_cg.in.settings
data/SS2/: cylinder_input_values.yml
data/SS3/: alloy_composition.csv  heat_treatment.csv  material_card_al.json  material_card_concrete.json  tabulated_elasto_plastic.json
images/: knowledgebase1.dot  knowledgebase1.graph
